--- a/src/client.html
+++ b/src/client.html
@@ -26,12 +26,11 @@
     <h1>Temperature and humidity</h1>
     <div id="chart_div" style="width: 400px; height: 120px"></div>
     <script>
-      let ws = "http://192.168.100.20:3000";
+      function renderDashboard() {
+        let ws = "http://192.168.100.20:3000";
 
-      fetch(ws)
-        .then((response) => response.json())
-        .then((json) => {
-          console.log(json);
+        function dashboard(json) {
+          // console.log(json);
           let TemperatureRedTo = json.maxTemperature;
           let TemperatureYellowFrom = (json.maxTemperature / 100) * 75;
           let TemperatureYellowTo = (json.maxTemperature / 100) * 90;
@@ -81,17 +80,24 @@
             chart.draw(data, optionsTemperature);
             chart.draw(data, optionsHumidity);
 
-            setInterval(function () {
-              data.setValue(0, 1, temperature);
-              chart.draw(data, optionsTemperature);
-            }, 1000);
+            data.setValue(0, 1, temperature);
+            chart.draw(data, optionsTemperature);
 
-            setInterval(function () {
-              data.setValue(1, 1, humidity);
-              chart.draw(data, optionsHumidity);
-            }, 1000);
+            data.setValue(1, 1, humidity);
+            chart.draw(data, optionsHumidity);
           }
+        }
+
+        fetch(ws, {
+          headers: { "Content-Type": "text/json" },
+        }).then((res) => {
+          // console.log(res.status);
+          res.json().then(dashboard);
         });
+      }
+
+      renderDashboard();
+      setTimeout(renderDashboard, 3e4);
     </script>
   </body>
 </html>
