--- a/src/client.html
+++ b/src/client.html
@@ -28,6 +28,7 @@
     <script>
       function renderDashboard() {
         let ws = "http://192.168.100.20:3000";
+        const ws = "http://"+location.host+":3000";
 
         function dashboard(json) {
           // console.log(json);
